New in v0.5.09 (2009/02/??)
---------------------------
Split parsedurl test from backendtest and add test cases.


New in v0.5.08 (2009/02/02)
---------------------------
Turns out going backwards in the license is not as easy as
forwards.  Restoring GPLv3 license until consensus reached.


New in v0.5.07 (2009/01/31)
---------------------------
bug #25293: IOError: [Errno 22] Invalid argument
https://savannah.nongnu.org/bugs/?25293

bug #25379: sys.exit() causes traceback and should not
https://savannah.nongnu.org/bugs/?25379

bug #25403: 0.5.06 "manifests not equal, different volume numbers"
https://savannah.nongnu.org/bugs/?25403

patch #6729: New imap backend. Replaces current gmail backend
https://savannah.nongnu.org/patch/?6729

patch #6730: Fix timing out for SSH backend
https://savannah.nongnu.org/patch/?6730

patch #6733: Improve error handling in imapbackend.py
https://savannah.nongnu.org/patch/?6733

Increase default volume size (--volsize) to 25M from 5M.  This
reduces the number of volumes to accomodate larger backups.

Reworked patch 6701 to list collection one at a time rather than
writing all as one huge list.  Was causing memeory problems when
the collections got large.

Fix backendtest.py so that empty URL's in config.py cause the
backend test to be skipped rather than erroring.  Added notes
in config.py.tmpl explaining the change.

Add/update copyright statements in all distribution source files
and revert duplicity to GPL version 2 license.

Original fix to disallow use of ncftpput 3.2.0 mistyped the ErrorCode
used and resulted in an error rather than an explanation.


New in v0.5.06 (2009/01/09)
---------------------------
Fix to deprecation warnings about sha and md5 modules.
Uses hashlib if available, otherwise original module.

Added loop to run-all-tests.sh to run all tests against all supported
versions of Python if available.  Looks for 2.3, 2.4, 2.5, 2.6.

Noah Spurrier has given us permission to distribute pexpect.py along